# experiments

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
expressions/: expressions_tests.cc
expts20/: CMakeLists.txt  demo20.cc  greeter.cc
iterators/: primes_tests.cc
misc/: CMakeLists.txt  max_products.cc  max_products.h  max_products_demo.cc  max_products_tests.cc  payoffs.cc
rc/: CMakeLists.txt  common.h  cspsc_q.h  cspsc_q_demo.cc  cspsc_q_tests.cc  simple_monitor.cc  spsc_q.cc  spsc_q.h  spsc_q_demo.cc  spsc_q_tests.cc
